fix alignment article title

--- a/css/social.css
+++ b/css/social.css
@@ -9,6 +9,7 @@
 	justify-content: flex-end;
 	list-style: none;
 	margin: 0;
+	padding: 0;
 }
 
 .socil-links li {
