--- a/css/type.css
+++ b/css/type.css
@@ -27,6 +27,7 @@
 	font-size: 100px;
 	font-weight: 700;
 	color: #0272DF;
+	margin-bottom: 0;
 }
 
 h3 {
